[package]
name = "mini-ssg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
clap = { version = "4.3.19", features = ["derive"] }
pulldown-cmark = "0.9.3"
serde = { version = "1.0.180", features = ["derive"] }
tera = "1.19.0"
toml = "0.7.6"
url = { version = "2.4.0", features = ["serde"] }
walkdir = "2.3.3"
